# async-api

./: .env.example  .gitignore  .gitlab-ci-dso.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  config  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: build-and-push-package.yml  cd.yml  ci.yml  cpin-sync.yaml  lint.yml  unit-tests.yml
api/: main.py
api/clients/: s3_client.py
api/core/: config.py  database.py  exception_handlers.py  security.py
api/docs/: code_samples.py
api/models/: __init__.py  client.py
api/repositories/: __init__.py  client_config_repository.py  client_repository.py  metrics_repository.py  (+2 more)
bruno/: Health check.bru  List services.bru  bruno.json
chart/: Chart.yaml  values-common.yaml  values-prod.yaml  values-staging.yaml  values.yaml
config/: services.yaml
docs/: api.http  index.html  openapi-target.yaml
scripts/: entrypoint.sh  entrypoint_dev.sh
tests/: conftest.py
workers/python/demo/: Dockerfile  demo.py  docker-compose.yml  pyproject.toml
workers/python/generation-render/: Dockerfile  main.py  pyproject.toml  worker.py
workers/python/generation-render/src/: config.py  logger.py  s3_client.py  task.py
workers/python/generation-render/src/renderers/: __init__.py  base.py  docx.py  odt.py  registry.py
workers/python/generation-render/tests/: test_docx_renderer.py  test_normalize_value.py  test_odt_renderer.py  test_task.py
workers/python/generation-render/tests/fixtures/: test_data.json  test_template.docx  test_template.odt
(+88 files in other folders)
