[project]
name = "demo-python-worker"
version = "0.1.0"
description = "Démo worker python pour async api"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "mic-worker==0.1.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
exclude = [".venv"]
typeCheckingMode = "off"
