[project]
name = "generation-render-worker"
version = "0.1.0"
description = "Worker de remplissage de templates ODT pour async-api"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35",
    "docxtpl>=0.20.2",
    "loguru>=0.7.3",
    "mic-worker==0.1.2",
    "pydantic-settings>=2.0",
    "pytest-asyncio>=1.3.0",
    "relatorio>=0.10",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
exclude = [".venv"]
typeCheckingMode = "off"
